wwr/site-plan-rafting.css
@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');

body {
    font-family: var(--paragraph-font);
    max-width: 960px;
    width: 20px;
}
:root {
    --primary-color:#004385ff;
    --secondary-color:#ab3428ff;
    --accent1-color:#f3e8eeff;
    --accent1-color:#fdca40ff;

    --heading-font: 'Rubik', serif;
    --paragrapg-font: 'Roboto', serif;

    --nav-background-color:#ab3428ff;
    --nav-link-color:#f3e8eeff;
    --nav-hover-link-color:#ab3428ff;
    --nav-hover-background-color:#004385ff ;
} 
body {
    font-family: var(--paragraph-font);
    max-width: 960px;
    padding: 20px;
}
h1, h2, h3, h4, h5, h6 {
    font-family: var(--heading-font);
    color: var(--primary-color);
}
header {
    padding: 20px;
    background-color: var(--accent1-color);
}
p {
    padding: 25px;
}
nav {
    background-color: var(--nav-background-color);
    font-size: 1.2rem;
    display: flex;
}
nav a {
    display: block;
    color: var(--nav-link-color);
    text-decoration: none;
    padding: 1rem;
}
nav a:link, nav a:visited {
    color: var(--nav-hover-link-color);
}
nav a:hover {
    color: var(--nav-hover-link-color);
    background-color: var(--nav-hover-background-color);
}

